# .maestro/parameters.yaml
# en: Run with arguments
# vi: Khi chạy file này bạn cần truyền params cho nó

# en: Example
# vi: Ví dụ:
# maestro test -e APP_ID=com.rnmaestro TITLE="This is title" .maestro/parameters.yaml
appId: ${APP_ID} # applicationId
---
- launchApp
- tapOn: "Enter your title"
- inputText: ${TITLE}
- assertVisible: ${TITLE}